--- a/assts/style.css
+++ b/assts/style.css
@@ -1,7 +1,7 @@
 *{
     margin:0;
     padding: 0%;
-    font-family: 'Poppins',sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 .header {
     min-height: 100vh;
@@ -10,6 +10,7 @@
     background-position: center; 
     background-size: cover;
     position: relative;
+
 }
 .nav{
     display: flex;
@@ -48,36 +49,40 @@ font-size: 13px;
 }
 .text-box{
     width:90%;
-    color:#fff;
+    color:#484646;
     position: absolute;
     top:50%;
     left:50%;
     transform: translate(-50%,-50%);
-    text-align:center;
+    display:flexbox;
 }
 .text-box h1{
-    font-size: 62px;
+    font-size: 45px;
     
 }
 .text-box p{
     margin: 10px 0 40px;
-     font-size: 8px;
+     font-size: 15px;
      color:#fff;
 }
 .hero-btn{
-       display: inline-block;
-       text-decoration: none;
-       color: #fff;
+    
+       text-decoration:none;
+       color: #100f0f;
        border: 20px soild #fff;
        padding: 12px 34px;
        font-size: 13px;
-       background: transparent;
-       cursor: pointer;
+       background: yellow;
+     
+    
 }
 .hero-btn:hover{
     border:1px solid yellow; 
     background:yellow;
+    color: #fff;
     transition: 1s;
+     
+
 
 }
 nav.fa{
@@ -116,16 +121,18 @@ nav.fa{
     margin: auto;
     text-align: center;
     padding-top:100px ;
-    background-image: url(img/wp12354462-bruce-wayne-4k-wallpapers.jpg);
+    background-color:#1b1f24;
     background-size: cover;
     position: relative;
+
 }
-.h1{ 
-    font-size:36px;
+h1{ 
+    font-size:26px;
     font-weight:600;
-}
-.p{
     color:#fff;
+}
+p{
+    color:#eae8e8;
     font-size: larger;
     font-weight: 300;
     line-height: 22px;
@@ -139,7 +146,7 @@ nav.fa{
 }
 .course-col{
      flex-basis: 31%;
-     background: yellow;
+     background:yellow;
      border-radius:10px;
      margin-bottom: 5%;
     padding:20px 12px;
