--- a/assts/style.css
+++ b/assts/style.css
@@ -58,7 +58,7 @@ font-size: 13px;
 }
 .text-box h1{
     font-size: 45px;
-    
+    color:#fff;
 }
 .text-box p{
     margin: 10px 0 40px;
@@ -81,16 +81,17 @@ font-size: 13px;
     background:yellow;
     color: #fff;
     transition: 1s;
-     
+} 
 
 
-}
-nav.fa{
+nav .fa{
     display: none;
 }
+
+
 @media(max-width:700px){
     .text-box h1{
-        font-size: 20px;
+        font-size: 20 px;
     }
  .nav-links ul li{
     display: block;
@@ -100,19 +101,26 @@ nav.fa{
     background:yellow;
     height: 100vh;
     width: 200px;
-    top:0;
-    right:0;
+    top:0; 
+    right:-200px;
     text-align:left;
-    z-index: 0; 
+    z-index: 2;
+    transition: 1s;
 
 }
- nav.fa{
+  nav.fa{
     display: block;
-     color:fff;
-    cursor: pointer;  
-     margin: 100px;
+     color:fff; 
+    margin: 20px;
+    padding-bottom: 100px;
+    font-size: 22px;
+    cursor:  pointer ;
 
-}
+} 
+ .nav-links ul{
+    padding: 30px;
+ }
+
 }
 /*---------------------------------------course-----------------------------------------*/
 .course{
@@ -126,14 +134,14 @@ nav.fa{
     position: relative;
     background-position: center;
     color:#1b1c22;
-   bac
 
-}
+
+
 h1{ 
-    font-size:26px;
+    font-size:36px;
     font-weight:600;
     color:#fff;
-}
+}  
 p{
     color:#eae8e8;
     font-size: larger;
